fix(app/header/styles): update vertical align for anchor tag

--- a/index.css
+++ b/index.css
@@ -56,7 +56,6 @@ header {
 .logo a {
 	display: block;
 	width: 75px;
-	height: 100%;
 }
 .logo span {
 	font-size: 2em;	
